Fix Spacing

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -123,8 +123,6 @@ li {
 
 .container {
   width: 100%;
-  padding-right: 1vw;
-  padding-left: 1vw;
   margin-bottom: 115px;
   video{
     padding: 10%; 
@@ -289,7 +287,6 @@ li {
   .side-wrapper {
     width: calc(100% - 32vw);
     max-width: calc(100% - 375px);
-    padding-right: 4vw;
   }
   
   .horizontal-container {
