--- a/src/scss/MainContent.scss
+++ b/src/scss/MainContent.scss
@@ -1,5 +1,6 @@
 .main {
-  padding-top: 40px;
+  padding: 40px 1vw 0 1vw;
+
   .content {
     padding: 0px 0px 50px 0;
     font-size: 16px;
